v1.1.9.300
- support for If-Modified-Since, If-Unmodified-Since headers
- serving content-files uses FILE_FLAG_SEQUENTIAL_SCAN
- xxmHttp: switched to custom winsock wrapper
- xxmLocal: fixed issue with first request for a static file after reload

v1.1.8.295
- optional project interface: IXxmProjectEvents1
- parser values: $l replaced by source line number, $v by current, $d by default
- set project default parser values from Web.xxmp
- xxmHttp: replaced first request parsing ReceiveLn with ReceiveBuf
- xxmHttp,xxmHost,xxmHSys: 'threads' option to set thread pool size
- added mongodb demo: "03 Data MongoDB"
- xxmConv: extra proto template fields (used by 'skip the handler' builds)
- xxmConv: /nolinemaps option
- signatures file "Web.xxmp.~db" changed to "src\xxmp.~db"
- fixed issue with access denied on loadcopy under load

v1.1.7.292
- xxmString: TStringContext.SaveToFile respects AutoEncoding parameter
- xxm.xml project registry revised, MSXML now only used for parsing.
- project registries use CompareText instead of comparing LowerCase'd strings
- 'embed HTML syntax': now supports start characters e.g. <p>>=i<</p> instead of <p>[[=i]]</p>
- xxmProject include unit files dialog supports multi-select
- xxmIsapi: fixed Redirect with https
- xxmHSys: support for https (pass argument "SecurePort=")
- xxmHSys2: support for HTTPAPI 2.0

v1.1.6.288
- security: EOL's in added header fields are disallowed
- fixed issue with URLEncoded and UTF8 encoded characters
- fixed issue when setting BufferSize from non-zero to zero	
- renamed xxmApache to xxmAhttpd, Apache httpd license states non-ASF projects may not use the Apache name
- xxmProject: register with xxm.xml
- xxmIsapi: override default buffering of IIS7 (remember to set Context.BufferSize!)
- xxm.xml supports relative paths in <ModulePath>
- Delphi XE2 support (as well as continued Delphi 7 support with the same source)

v1.1.5.285
- xxmHSYS: HTTPAPI handler